--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,14 @@
         <li>Email: yvesdidiergoure0@gmail.com</li>
         <li>Yopougon Toit Rouge</li>
     </ul>
-    <form action="">
+    <hr>
+    <form action="mailto:yvesdidiergoure0@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
-        <input type="text">
-        <input type="color" name="" id=""><br>
-        <label for="password">Password</label>
-        <input type="password" name="password" id=""><br>
-        <input type="range">
-        <label for="">Do You want to sign up to the email list?</label>
-        <input type="checkbox" name="" id="">
+        <input type="text" name="yourName"><br>
+        <label>Your Email</label>
+        <input type="email" name="yourEmail"><br>
+        <label>Your Message</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit">
     </form>
 <a href="index.html">return home</a>
